RESOLVED FIXED109671
[chromium] Fix scaling in WebViewImpl::handleGestureEvent
https://bugs.webkit.org/show_bug.cgi?id=109671
Summary [chromium] Fix scaling in WebViewImpl::handleGestureEvent
Alexandre Elias
Reported 2013-02-13 01:46:31 PST
[chromium] Fix scaling in WebViewImpl::handleGestureEvent
Attachments
Patch (12.25 KB, patch)
2013-02-13 01:50 PST, Alexandre Elias
no flags
Patch (12.56 KB, patch)
2013-02-13 12:25 PST, Alexandre Elias
no flags
Patch (14.69 KB, patch)
2013-02-14 12:56 PST, Alexandre Elias
no flags
Alexandre Elias
Comment 1 2013-02-13 01:50:08 PST
WebKit Review Bot
Comment 2 2013-02-13 02:02:34 PST
Comment on attachment 188033 [details] Patch Attachment 188033 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16527060
WebKit Review Bot
Comment 3 2013-02-13 02:03:03 PST
Comment on attachment 188033 [details] Patch Attachment 188033 [details] did not pass cr-linux-debug-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16537043
Peter Beverloo (cr-android ews)
Comment 4 2013-02-13 02:08:31 PST
Comment on attachment 188033 [details] Patch Attachment 188033 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/16546044
Alexandre Elias
Comment 5 2013-02-13 12:25:37 PST
Created attachment 188145 [details] Patch Fix LinkHighlightTest compile
WebKit Review Bot
Comment 6 2013-02-13 14:56:19 PST
Comment on attachment 188145 [details] Patch Clearing flags on attachment: 188145 Committed r142808: <http://trac.webkit.org/changeset/142808>
WebKit Review Bot
Comment 7 2013-02-13 14:56:23 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8 2013-02-14 05:05:11 PST
Re-opened since this is blocked by bug 109816
Andrew Wilson
Comment 9 2013-02-14 05:06:24 PST
I'm seeing crashes on the chromium webkit canary bots (http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fevents%2Ftouch%2Fgesture%2Fpad-gesture-cancel.html) crash log for DumpRenderTree (pid 2288): STDOUT: <empty> STDERR: SHOULD NEVER BE REACHED STDERR: ../../third_party/WebKit/Source/WebKit/chromium/src/WebInputEventConversion.cpp(216) : WebKit::PlatformGestureEventBuilder::PlatformGestureEventBuilder(WebCore::Widget *, const WebKit::WebGestureEvent &) STDERR: 1 0x5fa82eb WebKit::PlatformGestureEventBuilder::PlatformGestureEventBuilder(WebCore::Widget*, WebKit::WebGestureEvent const&) STDERR: 2 0x5fa7ec7 WebKit::PlatformGestureEventBuilder::PlatformGestureEventBuilder(WebCore::Widget*, WebKit::WebGestureEvent const&) STDERR: 3 0x600f5b7 WebKit::WebViewImpl::handleGestureEvent(WebKit::WebGestureEvent const&) STDERR: 4 0x601092f non-virtual thunk to WebKit::WebViewImpl::handleGestureEvent(WebKit::WebGestureEvent const&) STDERR: 5 0x5ed2b89 WebKit::PageWidgetDelegate::handleInputEvent(WebCore::Page*, WebKit::PageWidgetEventHandler&, WebKit::WebInputEvent const&) STDERR: 6 0x6017c0b WebKit::WebViewImpl::handleInputEvent(WebKit::WebInputEvent const&) STDERR: 7 0x4439793 WebTestRunner::EventSender::gestureFlingStart(std::vector<WebTestRunner::CppVariant, std::allocator<WebTestRunner::CppVariant> > const&, WebTestRunner::CppVariant*) STDERR: 8 0x4442ddb WebTestRunner::CppBoundClass::MemberCallback<WebTestRunner::EventSender>::run(std::vector<WebTestRunner::CppVariant, std::allocator<WebTestRunner::CppVariant> > const&, WebTestRunner::CppVariant*) STDERR: 9 0x442b6ea WebTestRunner::CppBoundClass::invoke(void*, _NPVariant const*, unsigned long, _NPVariant*) STDERR: 10 0x442b20b WebTestRunner::CppNPObject::invoke(NPObject*, void*, _NPVariant const*, unsigned int, _NPVariant*) STDERR: 11 0x85eee2f _ZN7WebCoreL18npObjectInvokeImplERKN2v89ArgumentsENS_18InvokeFunctionTypeE STDERR: 12 0x85ee0cc WebCore::npObjectMethodHandler(v8::Arguments const&) STDERR: 13 0x2f2ca36 _ZN2v88internalL19HandleApiCallHelperILb0EEEPNS0_11MaybeObjectENS0_12_GLOBAL__N_116BuiltinArgumentsILNS0_21BuiltinExtraArgumentsE1EEEPNS0_7IsolateE STDERR: 14 0x2f2c4da _ZN2v88internalL26Builtin_Impl_HandleApiCallENS0_12_GLOBAL__N_116BuiltinArgumentsILNS0_21BuiltinExtraArgumentsE1EEEPNS0_7IsolateE STDERR: 15 0x2f21dfc _ZN2v88internalL21Builtin_HandleApiCallENS0_12_GLOBAL__N_116BuiltinArgumentsILNS0_21BuiltinExtraArgumentsE1EEEPNS0_7IsolateE STDERR: 16 0x4870a216 STDERR: Received signal 11 SEGV_MAPERR 0000bbadbeef STDERR: [0x000002955f8f] STDERR: [0x000002955f2b] STDERR: [0x000002955bbb] STDERR: [0x000096f1059b] STDERR: [0x0000ffffffff] STDERR: [0x000005fa7ec7] STDERR: [0x00000600f5b7] STDERR: [0x00000601092f] STDERR: [0x000005ed2b89] STDERR: [0x000006017c0b] STDERR: [0x000004439793] STDERR: [0x000004442ddb] STDERR: [0x00000442b6ea] STDERR: [0x00000442b20b] STDERR: [0x0000085eee2f] STDERR: [0x0000085ee0cc] STDERR: [0x000002f2ca36] STDERR: [0x000002f2c4da] STDERR: [0x000002f21dfc] STDERR: [0x00004870a216] STDERR: ax: bbadbeef, bx: 79e1aa20, cx: 25052925, dx: 25052925 STDERR: di: 0, si: 916ddec, bp: c0082b18, sp: c0082a40, ss: 23, flags: 10282 STDERR: ip: 5fa82f5, cs: 1b, ds: 23, es: 23, fs: 0, gs: f
Alexandre Elias
Comment 10 2013-02-14 12:56:36 PST
Created attachment 188410 [details] Patch Reupload with fling assertion fix
WebKit Review Bot
Comment 11 2013-02-14 13:57:43 PST
Comment on attachment 188410 [details] Patch Clearing flags on attachment: 188410 Committed r142913: <http://trac.webkit.org/changeset/142913>
WebKit Review Bot
Comment 12 2013-02-14 13:57:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.