[chromium] Fix scaling in WebViewImpl::handleGestureEvent https://bugs.webkit.org/show_bug.cgi?id=109671

Reviewed by James Robinson.

My last patch broke a bunch of things in handleGestureEvent that
assumed the event came in scaled, most notably tap highlight and
double-tap zoom. Switch those to PlatformGestureEvent.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::handleGestureEvent):
(WebKit::WebViewImpl::bestTapNode):
(WebKit::WebViewImpl::enableTapHighlight):
* src/WebViewImpl.h:
(WebViewImpl):
* tests/LinkHighlightTest.cpp:
(WebCore::TEST):


Canonical link: https://commits.webkit.org/128028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142808 268f45cc-cd09-0410-ab3c-d52691b4dbfc